# ComfyUI-xiaozhuguang

./: .comfyignore  .gitignore  LICENSE  README.md  __init__.py  extension.json  pyproject.toml  requirements.txt  workflows.py  {
.github/workflows/: publish_action.yml
.playwright-cli/: page-2026-07-03T16-13-01-007Z.yml  page-2026-07-03T16-13-34-891Z.yml
docs/: code-audit-report.md  skill-panel-alignment.txt
example_workflows/: example_workflows.json
locales/en/: main.json  nodeDefs.json
locales/zh/: main.json  nodeDefs.json
nodes/: xzg_atbc.py  xzg_atr.py  xzg_duplicate_first_frame.py  xzg_first_last_frame.py  xzg_frame_extract.py  xzg_get_widget.py  xzg_image_compare.py  xzg_image_loader.py  xzg_image_preview.py  xzg_image_save.py  xzg_lazy_check.py  xzg_mask_bbox.py  xzg_mask_box_smooth.py  xzg_mask_smooth.py  xzg_qwen3_vl_instruct.py  xzg_universal_slider.py
web/: node_favorites.css  node_favorites.js  xzg_align.js  xzg_boolean_selector.js  xzg_get_widget.js  xzg_group.css  xzg_group.js  xzg_i18n.js  xzg_image_compare.js  xzg_image_loader.js  xzg_image_preview.js  xzg_image_save.js  xzg_menu_hide.js  xzg_number_switch.js  xzg_points_editor.js  xzg_quick_nodes.js  xzg_qwen.js  xzg_selector.js  xzg_slider.js  xzg_theme.css  xzg_theme.js  xzg_theme_panel.js  xzg_theme_presets.js  xzg_universal_slider.js  xzg_workflows.js
